# llama-stack

./: .coveragerc  .gitignore  .impeccable.md  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PR_REVIEW.md  README.md  RELEASE_NOTES.md  RELEASE_PROCESS.md  SECURITY.md  conftest.py  pr.diff  pyproject.toml  reproduce_conftest_bug.py
.github/: PULL_REQUEST_TEMPLATE.md  TRIAGERS.md  dependabot.yml  mergify.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature-request.yml
.github/workflows/: README.md  backward-compat.yml  build-distributions.yml  ci-status.yml  codeql.yml  commit-recordings.yml  conformance.yml  create-release-branch.yml  create-tag.yml  dispatch-version-update-to-odh-distribution.yml  docs-build.yml  file-processors-tests.yml  install-script-ci.yml  integration-auth-tests.yml  integration-responses-conversations-auth-tests.yml  integration-sql-store-tests.yml  integration-tests.yml  integration-vector-io-tests.yml  odh-create-release-branch.yml  odh-create-tag.yml  odh-trigger-gitlab-update-deps.yml  (+20 more)
.tmp/: AGENTS_DOCUMENTATION.md  pr-4376-review.md
containers/: Containerfile
dev/: docker-compose.yml  generate-report.sh  llama-dev  serve-report.py  setup-once.sh  test-agents.sh  test-inference.sh  test-quick.sh  test-streaming.sh
docs/: README.md  docusaurus.config.ts  getting_started.ipynb  getting_started_llama_api.ipynb  getting_started_ogx_api.ipynb  license_header.txt  original_rfc.md  package-lock.json  package.json  quick_start.ipynb  sidebars.ts
reports/: local-dev-guide.html  playground.html  python-debugging-guide.html
scripts/: README.md  anthropic_coverage.py  capture_google_interactions_fixtures.py  check-api-conformance.sh  check-init-py.sh  check-no-fstring-logging.sh  check-workflows-use-hashes.sh  check_file_size.py  cleanup_recordings.py  diagnose_recordings.py  distro_codegen.py  docker.sh  gen-ci-docs.py  generate-config-labels.sh  generate_anthropic_coverage_docs.py  generate_ci_matrix.py  generate_google_interactions_coverage_docs.py  generate_openai_coverage_docs.py  generate_prompt_format.py  get_setup_env.py  google_interactions_coverage.py  install.sh  integration-auth-tests.sh  integration-responses-conversations-auth-tests.sh  integration-tests.sh  normalize_recordings.py  openai_coverage.py  provider_codegen.py  provider_compat_matrix.py  record-openresponses-conformance.sh  responses_test_coverage.py  run-ui-linter.sh  run_openapi_generator.sh  test_interactions_api.py  unit-tests.sh  uv-run-with-index.sh  verify-config-labels.sh
src/llama_stack_api/: README.md  __init__.py  agents.py  connectors.py  datatypes.py  filters.py  inference.py  openai_responses.py  pyproject.toml  resource.py  router_utils.py  schema_utils.py  tools.py  validators.py  vector_stores.py
src/llama_stack_api/agents/: __init__.py  api.py  fastapi_routes.py  models.py
src/llama_stack_api/benchmarks/: api.py  models.py
src/llama_stack_api/common/: content_types.py  errors.py  job_types.py  upload_safety.py
src/llama_stack_api/connectors/: __init__.py  api.py  fastapi_routes.py  models.py
src/llama_stack_api/conversations/: fastapi_routes.py  models.py
src/llama_stack_api/datasetio/: __init__.py  api.py  fastapi_routes.py  models.py
src/llama_stack_api/datasets/: models.py
src/llama_stack_api/eval/: __init__.py  compat.py
src/llama_stack_api/file_processors/: fastapi_routes.py
src/llama_stack_api/files/: fastapi_routes.py  models.py
src/llama_stack_api/inference/: __init__.py  api.py  fastapi_routes.py  models.py
src/llama_stack_api/interactions/: __init__.py  api.py  fastapi_routes.py  models.py
src/llama_stack_api/internal/: kvstore.py  sqlstore.py
src/llama_stack_api/messages/: __init__.py  api.py  fastapi_routes.py  models.py
src/llama_stack_api/models/: fastapi_routes.py  models.py
src/llama_stack_api/post_training/: fastapi_routes.py
src/llama_stack_api/prompts/: __init__.py  api.py  fastapi_routes.py  models.py
src/llama_stack_api/providers/: api.py
src/llama_stack_api/responses/: __init__.py  api.py  fastapi_routes.py  models.py
src/llama_stack_api/safety/: __init__.py  api.py  datatypes.py  fastapi_routes.py  models.py
src/llama_stack_api/scoring/: __init__.py  api.py  fastapi_routes.py  models.py
src/llama_stack_api/scoring_functions/: __init__.py  api.py  fastapi_routes.py  models.py
src/llama_stack_api/shields/: api.py  models.py
src/llama_stack_api/tools/: __init__.py  api.py  fastapi_routes.py  models.py
src/llama_stack_api/vector_io/: __init__.py  api.py  fastapi_routes.py  models.py
tests/: README.md
(+1866 files in other folders)
